--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
 pylint~==2.15.5
 nbstripout~==0.6.1
+PyDrive~==1.3.1
+pandas~==1.5.1
+pyarrow~==10.0.0  # read_parquet engine
+fsspec~==2022.11.0  # AWS
+s3fs~==2022.11.0
+awswrangler~==2.17.0  # Interaction with AWS-S3
